Fixed responsive issues on small screens

--- a/style.css
+++ b/style.css
@@ -258,6 +258,24 @@ h1 {
 }
 
 
+
+@media only screen and (max-width: 400px) {
+    #reset {
+        font-size: 3vmin;
+        padding: 2vmin;
+        margin-top: -2vmin;
+    }
+    #mine {
+        height: 17vmin;
+    } 
+
+    #number {
+        height: 17vmin;
+    }
+}
+
+
+
 @media only screen and (min-width: 481px) {
     #reset {
         font-size: 3vmin;
